k8s-hello-world-app.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  labels:
    app: hello-world
spec:
  type: ClusterIP
  ports:
  - port: 4000
    targetPort: phx-port
  selector:
    app: hello-world

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  labels:
    app: hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - name: hello-world
        image: edwardzhou/hello-world:1.0
        ports:
          - containerPort: 4000
            name: phx-port
