k8s-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: helloworld-ingress
  namespace: demo-test
  labels:
    app.kubernetes.io/name: helloworld
    app.kubernetes.io/version: v1
  annotations:
    proxy-real-ip-cide: "127.0.0.6/32,10.233.107.21/32"
    nginx.org/compute-full-forwarded-for: 'true'
    nginx.org/forwared-for-header: X-Forwarded-For
    nginx.org/use-forwareded-headers: 'true'
    nginx.org/use-proxy-protocol: 'true'
    proxy.istio.io/config: '{"gatewayTopology" : { "numTrustedProxies": 1, "forwardClientCertDetails": APPEND_FORWARD } }'
    enable-real-ip: 'true'
    enable-underscores-in-headers: 'true'
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: nginx
                port:
                  number: 80
