k8s.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-world
  name: hello-world
spec:
  ports:
  - port: 4000
    targetPort: phx-port
  selector:
    app: hello-world
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: nginx
spec:
  ports:
  - name: web
    port: 80
    targetPort: nginx-port
  selector:
    app: nginx
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello-world
  name: hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - image: edwardzhou/hello-world:1.0
        name: hello-world
        ports:
        - containerPort: 4000
          name: phx-port
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: edwardzhou/nginx:1.21.3-alpine
        name: nginx
        ports:
        - containerPort: 80
          name: nginx-port
        volumeMounts:
        - mountPath: /etc/nginx/conf.d/vhosts/hello-world.com.conf
          name: hello-world-configmap-files
          subPath: hello-world.com.conf
      volumes:
      - configMap:
          name: hello-world-configmap-files-fd4tf44mkc
        name: hello-world-configmap-files
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubesphere.io/creator: admin
    nginx.ingress.kubernetes.io/upstream-vhost: new-t.leangoo.com
    proxy-real-ip-cide: 127.0.0.6/32,10.233.107.21/32
  labels:
    app.kubernetes.io/name: bookinfo
    app.kubernetes.io/version: v1
  name: leangoo-ingress
  namespace: demo-test
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: nginx
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
